docs: clean up and accurately rewrite   documentation